--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <!-- <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    />-->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> 
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,25 +27,42 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-
-    <h1>Web Dev Assignments</h1>
     <ul>
-    <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
-    <li><a href="tuiter/navigation.html">Tuiter</a></li>
+        <li>
+            <a href = "home.html">Home</a>
+        </li>
+
+        <li>
+            <a href = "explore.html">Explore</a>
+        </li>
+
+        <li>
+            <a href = "notifications.html">Notifications</a>
+        </li>
+
+        <li>
+            <a href = "messages.html">Messages</a>
+        </li>
+
+        <li>
+            <a href = "bookmarks.html">Bookmarks</a>
+        </li>
+
+        <li>
+            <a href = "lists.html">Lists</a>
+        </li>
+
+        <li>
+            <a href = "profile.html">Profile</a>
+        </li>
+
+        <li>
+            <a href = "tuit.html">Tuit</a>
+        </li>
+
+        <li>
+            <a href = "reply.html">Reply</a>
+        </li>
     </ul>
-
-
   </body>
 </html>
