--- a/public/tuiter/tuit.html
+++ b/public/tuiter/tuit.html
@@ -39,6 +39,7 @@
          rows="3"
          placeholder="What's happening?"
          title="tooltip">
+         What's happening?
     </textarea>
 
     <br/>
