--- a/public/tuiter/tuit.html
+++ b/public/tuiter/tuit.html
@@ -38,8 +38,7 @@
     <textarea cols="25"
          rows="3"
          placeholder="What's happening?"
-         title="tooltip">
-         What's happening?
+         title="tooltip">What's happening?
     </textarea>
 
     <br/>
