--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -33,7 +33,7 @@
         </li>
 
         <li>
-            <a href = "explore.html">Explore</a>
+            <a href = "explore/index.html">Explore</a>
         </li>
 
         <li>
@@ -45,7 +45,7 @@
         </li>
 
         <li>
-            <a href = "bookmarks.html">Bookmarks</a>
+            <a href = "bookmarks/index.html">Bookmarks</a>
         </li>
 
         <li>
