--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -41,8 +41,8 @@
         
             <span class="wd-authortext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <div class = "wd-tuitphoto"><img class = "wd-postimgtag" src="../images/alice.jpeg"/></div>
             <div class = "wd-maincontent">
-                <h4>Where does it come from...</h4>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <h4>Alice in Wonderland...</h4>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.Contrary to popular belief, Lorem Ipsum is not simply random text.Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
             </div>
             <ul class="wd-actions">
                 <li > <a href = "#" class = "wd-actionurl"><img class = "wd-action-icon" src="../images/comment.png"/> 22 </a></li>
