--- a/public/labs/a3/index.html
+++ b/public/labs/a3/index.html
@@ -369,12 +369,94 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     </div>
   </div>
 
+  <p>Examples for Flex:</p>
+  <p>Aligning flex elements horizontally : center, end, space-around and space-between</p>
+  <div class="flex-container-hor">
+  <div class="flex-box flex-box-1">A</div>
+  <div class="flex-box flex-box-2">
+    B C<br/>B B
+  </div>
+  <div class="flex-box flex-box-3">
+    C C C<br/>C C C <br/>C C C 
+  </div>
+</div>
+
+<div class="flex-container-hor-end">
+    <div class="flex-box flex-box-1">A</div>
+    <div class="flex-box flex-box-2">
+      B C<br/>B B
+    </div>
+    <div class="flex-box flex-box-3">
+      C C C<br/>C C C <br/>C C C 
+    </div>
+  </div>
+
+  <div class="flex-container-hor-spacearound">
+    <div class="flex-box flex-box-1">A</div>
+    <div class="flex-box flex-box-2">
+      B C<br/>B B
+    </div>
+    <div class="flex-box flex-box-3">
+      C C C<br/>C C C <br/>C C C 
+    </div>
+  </div>
+
+  <div class="flex-container-hor-spacebetween">
+    <div class="flex-box flex-box-1">A</div>
+    <div class="flex-box flex-box-2">
+      B C<br/>B B
+    </div>
+    <div class="flex-box flex-box-3">
+      C C C<br/>C C C <br/>C C C 
+    </div>
+  </div>
+
+ 
+  <p>Aligning flex elements vertically : start, end , independent</p>
+  
+  <div class="flex-container-ver">
+    <div class="flex-box flex-box-1">A</div>
+    <div class="flex-box flex-box-2">
+      B C<br/>B B
+    </div>
+    <div class="flex-box flex-box-3">
+      C C C<br/>C C C <br/>C C C 
+    </div>
+  </div>
+
+  <div class="flex-container-ver-center">
+    <div class="flex-box flex-box-1">A</div>
+    <div class="flex-box flex-box-2">
+      B C<br/>B B
+    </div>
+    <div class="flex-box flex-box-3">
+      C C C<br/>C C C <br/>C C C 
+    </div>
+  </div>
+
+  <div class="flex-container-independent">
+    <div class="flex-box flex-box-1">A</div>
+    <div class="flex-box flex-box-2">
+      B C<br/>B B
+    </div>
+    <div class="flex-box flex-box-3">
+      C C C<br/>C C C <br/>C C C 
+    </div>
+  </div>
+
+
   <!-- Insert own example -->
 
   <h2>Media queries</h2>
 <p class="media-query">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 </p>
+
+<h2 class="media-query-myexample">
+    This statement is my example using header tag. Web Dev is fun!
+</h2>
+
+
 
 
    
