a3 css fall 2022-updated

--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -25,7 +25,7 @@
                 <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
             <ul class="wd-actions">
-                <li > <a href = "#" class = "wd-actionurl"><img class = "wd-action-icon" src="../images/comment.png"/> 22 </a></li>
+                <li > <a href = "#"><img class = "wd-action-icon" src="../images/comment.png"/> 22 </a></li>
                 <li><a href = "#" class = "wd-actionurl"><img class = "wd-action-icon" src="../images/retweet.png"/> 9 </a></li>
                 <li class="wd-selectedaction"> <a href = "#" class = "wd-actionurl"><img class = "wd-action-icon" src="../images/love.png"/> 37 </a></li>
                 <li> <a href = "#" class = "wd-actionurl"><img class = "wd-action-icon" src="../images/share.png"/> </a></li>           
