--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -19,7 +19,7 @@
             <img class = "wd-menudots" src="../images/dots.png"/>
             <div class="wd-author-details">  Robert Zubrin  <span class = "wd-username">@robert_zubrin · July 31</span></div>
         
-            <span class="wd-authortext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <div class = "wd-tuitphoto"><img class = "wd-postimgtag" src="../images/puppy.png"/></div>
+            <span class="wd-authortext"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.  <div class = "wd-tuitphoto"><img class = "wd-postimgtag" src="../images/puppy.png"/></div>
             <div class = "wd-maincontent">
                 <h4>Where does it come from...</h4>
                 <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
@@ -42,7 +42,7 @@
             <span class="wd-authortext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <div class = "wd-tuitphoto"><img class = "wd-postimgtag" src="../images/alice.jpeg"/></div>
             <div class = "wd-maincontent">
                 <h4>Alice in Wonderland...</h4>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.Contrary to popular belief, Lorem Ipsum is not simply random text.Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
             </div>
             <ul class="wd-actions">
                 <li > <a href = "#" class = "wd-actionurl"><img class = "wd-action-icon" src="../images/comment.png"/> 22 </a></li>
