--- a/public/labs/a4/challenge/index.html
+++ b/public/labs/a4/challenge/index.html
@@ -98,7 +98,7 @@
 
 
 
-                <ul class="nav nav-tabs mt-1 mb-1 me-0 ps-1">
+                <ul class="nav nav-tabs mt-1 mb-1 me-0 ">
                     <li class="nav-item">
                         <a class="nav-link override-nav" href="#">
                             For You
@@ -264,7 +264,7 @@
                         <div class="list-group-item followsection">
                             <div class="ms-2 d-inline fw-normal"></div>
                                 
-                            <div class="d-inline-block"><a href="#" class="removehighlight">Show More </a>
+                            <div class="d-inline-block override-corners"><a href="#" class="removehighlight">Show More </a>
                                     
                             </div>  
                         </div>
