--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -37,7 +37,7 @@
         </li>
 
         <li>
-            <a href = "notifications.html">Notifications New</a>
+            <a href = "notifications.html">Notifications</a>
         </li>
 
         <li>
