--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- <div id="root"></div> -->
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -40,7 +39,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <h1>Web Dev Assignments</h1>
+    <!-- <h1>Web Dev Assignments</h1>
     <ul>
     <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
     <li><a href="labs/a3/index.html">Assignment 3 Labs</a></li>
@@ -49,7 +48,7 @@
     <li><a href="labs/a5/index.html">Assignment 5 Lab</a>
     <li><a href="labs/a5/todos/index.html">Assignment 5 Lab - Todo List Section</a>
     <li><a href="tuiter/navigation.html">Tuiter</a></li>
-    </ul>
+    </ul> -->
 
 
   </body>
